--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/Main.css">
 </head>
 <script src="scripts/jquery-2.1.3.min.js"></script>
+<script src="scripts/Message.js"></script>
 <script src="game.js"></script>
 <script src="main.js"></script>
 <body>
